- Picked up fixes and changes from the Readline repo:
  - **Breaking Change:** The name for `readline-colored-completion-prefix` no longer has a leading `.`; the original report was based on a misunderstanding.
  - Sync with how the Readline repo picked up some fixes and changes contributed from the Clink repo.
  - Changes for Unicode combining characters.
  - Fixed a bug that allowed ^G to retain a saved command to execute.
  - Fixed macro recording during searches.
  - Fixed some small leaks in edge cases.
  - Fixed off-by-one error when tokenizing words like `$((expr))` while performing history expansion.
  - Fixed attempting to change case of invalid multibyte characters.
  - Fixed `completion-prefix-display-length` and `colored-completion-prefix` to be mutually exclusive.
  - Fixed to not check for signals when handling a received signal.
  - Fixed signal checking to handle signals that arrive before Readline restore's the application's signal handlers.

#### v1.7.22

- Explicitly disable `loadlib` and related support in Lua; Clink uses a statically linked Lua engine and does not support dynamic C libraries.
- Fixed the `onprovideline` event so it doesn't interfere with the `same_dir` mode of `prompt.transient`.
- Fixed input line coloring of `echo` in `for %i (1 2 3) do @echo %i` (regression introduced in v1.6.16).
- Fixed how `clink autorun set` parses flags and quotes, so that `clink autorun set \"c:\my tools\clink\" inject --autorun` works as expected.
- Fixed the `exec.commands` setting when an argmatcher uses `:chaincommand()`.
- Fixed edge cases for `@` command prefix when an argmatcher uses `:chaincommand()`.
- Fixed [#779](https://github.com/chrisant996/clink/issues/779); an argmatcher's `onadvance` callback accidentally advanced two times if it advanced to the last argument slot.
- Fixed [#782](https://github.com/chrisant996/clink/issues/782); on Windows 8.1, some multiline prompts may render with extra blank lines.

#### v1.7.21
