@@ -17,7 +17,7 @@
   - **Breaking Change:** The name for `readline-colored-completion-prefix` no longer has a leading `.`; the original report was based on a misunderstanding.
   - Sync with how the Readline repo picked up some fixes and changes contributed from the Clink repo.
   - Changes for Unicode combining characters.
-  - Fixed a bug that allowed ^G to retain a saved command to execute.
+  - Fixed a bug that allowed <kbd>^G</kbd> to retain a saved command to execute.
   - Fixed macro recording during searches.
   - Fixed some small leaks in edge cases.
   - Fixed off-by-one error when tokenizing words like `$((expr))` while performing history expansion.
@@ -25,6 +25,9 @@
   - Fixed `completion-prefix-display-length` and `colored-completion-prefix` to be mutually exclusive.
   - Fixed to not check for signals when handling a received signal.
   - Fixed signal checking to handle signals that arrive before Readline restore's the application's signal handlers.
+  - Fixed the non-incremental history search implementation to make it more consistent with incremental search.
+  - Fixed some undo list memory management bugs; leaks and double-frees (i.e. heap corruption).
+  - Fixed some use-after-free of the undo list errors when stacking multiple commands that use `rl_maybe_replace_line()` to save changes to a history entry.
 
 #### v1.7.22
 
